ota-site/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: caramel-vanilla
  labels:
    app.kubernetes.io/part-of: caramel-vanilla
    app.kubernetes.io/component: ota-site
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
