ota-site/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caramel-vanilla-ota-site
  namespace: caramel-vanilla
  labels:
    app.kubernetes.io/part-of: caramel-vanilla
    app.kubernetes.io/component: ota-site
    app.kubernetes.io/name: caramel-vanilla-ota-site
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: caramel-vanilla-ota-site
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
