ota-site/50-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: caramel-vanilla
  namespace: caramel-vanilla
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true"
  labels:
    app.kubernetes.io/part-of: caramel-vanilla
    app.kubernetes.io/component: ota-site
    app.kubernetes.io/name: caramel-vanilla-ota-site
spec:
  host: caramel-vanilla.apps.radiosound.com
  to:
    kind: Service
    name: caramel-vanilla-ota-site
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
