ota-site/20-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: caramel-vanilla
  labels:
    app.kubernetes.io/part-of: caramel-vanilla
    app.kubernetes.io/component: ota-site
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-public-router
  namespace: caramel-vanilla
  labels:
    app.kubernetes.io/part-of: caramel-vanilla
    app.kubernetes.io/component: ota-site
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: caramel-vanilla-ota-site
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/ingress: ""
        - ipBlock:
            cidr: 192.168.1.46/32
        - ipBlock:
            cidr: 192.168.1.34/32
        - ipBlock:
            cidr: 192.168.1.35/32
        - ipBlock:
            cidr: 10.130.0.1/32
        - ipBlock:
            cidr: 10.130.0.2/32
        - ipBlock:
            cidr: 10.128.0.1/32
        - ipBlock:
            cidr: 10.128.0.2/32
        - ipBlock:
            cidr: 10.129.0.1/32
        - ipBlock:
            cidr: 10.129.0.2/32
      ports:
        - port: 8080
          protocol: TCP
